# Concise-Computer-Vision

./: pyproject.toml
Chapter1/: Non-programming Exercises.md
Chapter1/Exo1/: Homogeneous and Inhomogeneous Windows.md  analyze_image_at_cursor.py  display_color_histograms.py  load_and_display_image.py
Chapter1/Exo2/: Data Measures for Image Sequence Analysis.md  calculate_data_measures.py  compare_measures_l1.py  normalize_measures.py  read_image_sequence.py
Chapter1/Exo3/: Solutions.md  mix_images_in_frequency_domain.py  modify_texture_in_frequency_domain.py
Chapter1/Exo4/: create_rgb_slice.py  create_saturation_slice.py
Chapter2/: Non-programming Exercises.md
Chapter2/Exo1/: histogram_equalization_r.py
Chapter2/Exo2/: log_edge_detection.py  sobel_edge_detection.py
Chapter2/Exo3/: compute_amplitude_phase_images.py
Chapter2/Exo4/: Discussion.md  generate_residual_images.py
Chapter4/: Exo11.md  Exo6.md  Exo8.md
Chapter4/Exo1/: horn_schunck_optical_flow.py
Chapter4/Exo2/: calculate_optical_flow.py
Chapter5/Exo1/: segment_image_with_flood_fill.py
Chapter5/Exo3/: mean_shift_segmentation.py
