[tool.poetry]
name = "concise"
version = "0.1.0"
description = ""
authors = ["Zakariae MOUTAOUAKIL <zakariae.moutaouakil@etu.u-paris.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
